--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "fastapi>=0.112",
     "greenlet>=3.2.4",
+    "openai>=1.107.2",
     "pydantic>=2.11.7",
     "ruff>=0.13.0",
     "sqlalchemy>=2.0.43",
